# json2vec

./: .gitignore  .pre-commit-config.yaml  BIBLIOGRAPHY.md  CITATION.bib  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  pypi-publish.yml  pypi-release-on-version.yml  release.yml
docs/: README.md  getting-started.md  index.md  motivation.md  story.typ  summary.typ  whitepaper.typ
docs/assets/stylesheets/: docs.css
docs/data/: breast-cancer.jsonl  iris-raw.jsonl  iris.jsonl  wine.jsonl
docs/data-types/: array.md  category.md  dateparts.md  entity.md  improvement-spec.md  index.md  number.md  set.md  text.md  vector.md
docs/guides/: field-ablation.ipynb  model-schemas.md  model-set.ipynb  model-update.ipynb  preprocessors.ipynb  tensorfields.ipynb
docs/overrides/partials/: footer.html  header.html
docs/reference/: api.md
docs/tutorials/: e2e-training.ipynb  fine-tuning.ipynb  hello-world.ipynb  nested-supervised-training.ipynb  pretraining.ipynb  serving.ipynb  supervised-tabular-training.ipynb
examples/: hello_world.ipynb  serve.py
specs/: dynamic-node-mutations.md  mutation-history-removal.md
src/json2vec/: __init__.py  __main__.py  callbacks.py  distributed.py
src/json2vec/architecture/: attention.py  checkpoint.py  contracts.py  counter.py  encoder.py  graph.py  mutations.py  node.py  plot.py  pool.py  root.py  rotary.py  runtime.py  schema_editor.py
src/json2vec/data/: datasets.py  iterables.py  processing.py
src/json2vec/entrypoints/: __init__.py  pipeline.py
src/json2vec/inference/: callback.py  deployment.py
src/json2vec/logging/: __init__.py  config.py  epoch.py  throughput.py  tracking.py
src/json2vec/preprocessors/: __init__.py  base.py  spec.py
src/json2vec/processors/: __init__.py  base.py  spec.py
src/json2vec/structs/: enums.py  environment.py  experiment.py  packages.py  selectors.py  structure.py  tree.py
src/json2vec/tensorfields/: __init__.py  base.py  spec.py
tests/: test_callbacks.py  test_public_api.py
tests/architecture/: test_attention.py  test_contracts.py  test_counter.py  test_encoder.py  test_packages.py  test_plot.py  test_pool.py  test_refactor_boundaries.py  test_root.py  test_transform.py
tests/data/: test_datasets.py  test_processing.py
tests/examples/: test_e2e_examples.py
tests/inference/: test_callback.py  test_deployment_batching.py  test_deployment_e2e.py
tests/logging/: test_epoch.py  test_throughput.py  test_tracking.py
tests/preprocessors/: test_base.py
tests/processors/: test_base.py
tests/structs/: test_dataset_config.py  test_enums.py  test_environment.py  test_experiment_dataset_and_patch.py  test_experiment_loading.py  test_experiment_validation.py  test_schema_api.py  test_structure_model.py  test_tree_validation.py
tests/tensorfields/: test_base_plugin.py
(+25 files in other folders)
