[project]
name = "json2vec"
version = "0.4.3"
description = "{...} -> [*]"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.21.0",
    "pluggy>=1.6.0",
    "rich>=14.0.0",
    "pydantic>=2.11.7",
    "jmespath>=1.0.1",
    "loguru>=0.7.3",
    "anytree>=2.13.0",
    "ordered-set>=4.1.0",
    "pyarrow>=21.0.0",
    "polars>=1.35.2",
    "numpy>=2.2.6",
    "lightning>=2.6.4",
    "tensordict>=0.10.0",
    "torch>=2.7.1",
]

[project.optional-dependencies]
serving = [
    "litserve>=0.2.13",
    "pydantic-settings>=2.10.1",
]
text = [
    "transformers>=4.55.0",
]
docs = [
    "mkdocs-material>=9.6",
    "mkdocs-jupyter>=0.26.3",
    "mkdocstrings[python]>=0.27",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
    "pytest>=8.4.1",
    "ipython>=9.9.0",
    "ipykernel>=6.29.5",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "litserve>=0.2.13",
    "pydantic-settings>=2.10.1",
    "ty>=0.0.1a20",
    "pre-commit>=4.3.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["json2vec*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
lint.extend-select = ["I"]
